fix post spacing

--- a/style.css
+++ b/style.css
@@ -598,7 +598,6 @@ a:active {
 .post {
 	float: left;
 	width: 100%;
-	padding-bottom: 7%;
 }
 
 .post .entry-thumbnail {
